--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,31 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.machinezoo.noexception</groupId>
+      <artifactId>noexception</artifactId>
+      <version>1.1.0</version>
+    </dependency>
+    
   </dependencies>
+
+  <build>
+  <plugins>
+    <plugin>
+      <!-- Build an executable JAR -->
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-jar-plugin</artifactId>
+      <version>3.1.0</version>
+      <configuration>
+        <archive>
+          <manifest>
+            <mainClass>ru.spbstu.telematics.java.App</mainClass>
+          </manifest>
+        </archive>
+      </configuration>
+    </plugin>
+  </plugins>
+</build>
+
 </project>
