--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
       <version>1.1.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.6.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
