--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,6 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
-      <groupId>com.machinezoo.noexception</groupId>
-      <artifactId>noexception</artifactId>
-      <version>1.1.0</version>
-    </dependency>
-
     <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
     <dependency>
       <groupId>commons-cli</groupId>
@@ -51,6 +45,35 @@
       <configuration>
         <source>8</source>
         <target>8</target>
+      </configuration>
+    </plugin>
+    <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-dependency-plugin</artifactId>
+    <version>2.5.1</version>
+    <executions>
+      <execution>
+        <id>copy-dependencies</id>
+        <phase>package</phase>
+        <goals>
+          <goal>copy-dependencies</goal>
+        </goals>
+        <configuration>
+        </configuration>
+      </execution>
+    </executions>
+  </plugin>
+    <plugin>
+      <artifactId>maven-assembly-plugin</artifactId>
+      <configuration>
+        <archive>
+          <manifest>
+            <mainClass>ru.spbstu.telematics.java.App</mainClass>
+          </manifest>
+        </archive>
+        <descriptorRefs>
+          <descriptorRef>jar-with-dependencies</descriptorRef>
+        </descriptorRefs>
       </configuration>
     </plugin>
   </plugins>
