--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,7 +17,8 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    permissions: write-all
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -28,9 +29,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
-    - name: Run test
-      run: mvn -B --update-snapshots verify
+      run: mvn -B package assembly:single --file pom.xml
+
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
