--- a/pom.xml
+++ b/pom.xml
@@ -47,10 +47,7 @@
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-compiler-plugin</artifactId>
-      <configuration>
-        <source>10</source>
-        <target>10</target>
-      </configuration>
+      <version>3.10.1</version>
     </plugin>
     <plugin>
       <artifactId>maven-assembly-plugin</artifactId>
