--- a/pom.xml
+++ b/pom.xml
@@ -48,13 +48,17 @@
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-compiler-plugin</artifactId>
       <version>3.10.1</version>
+      <configuration>
+        <source>17</source>
+        <target>17</target>
+      </configuration>
     </plugin>
     <plugin>
       <artifactId>maven-assembly-plugin</artifactId>
       <configuration>
         <archive>
           <manifest>
-            <mainClass>ru.spbstu.telematics.java.App</mainClass>
+            <mainClass>ru.spbstu.telematics.java.lab1.Main</mainClass>
           </manifest>
         </archive>
         <descriptorRefs>
